# ChangeLog for sci-physics/clhep
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-physics/clhep/ChangeLog,v 1.44 2012/11/30 21:59:52 bicatali Exp $

*clhep-2.1.3.1 (30 Nov 2012)

  30 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.3.1.ebuild,
  -clhep-2.1.2.3.ebuild, clhep-2.1.2.4.ebuild:
  Version bump. Fixed parallel doc building (bug #437482) and doc installation
  directory

  14 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +files/clhep-2.1.2.4-lsb-whitespace.patch, clhep-2.1.2.4.ebuild:
  Fix when lsb_release is installed by stripping whitespaces, bug #430656

*clhep-2.1.2.4 (07 Aug 2012)

  07 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.2.4.ebuild,
  +files/clhep-2.1.2.4-libdir.patch, -clhep-2.1.1.0.ebuild,
  -clhep-2.1.2.0.ebuild, -clhep-2.1.2.2.ebuild,
  -files/clhep-2.1.2.2-automake-1.12.patch, clhep-2.1.0.1.ebuild, metadata.xml:
  Version bump, fixed older version for automake-1.9, bug #428006

*clhep-2.1.2.3 (28 Jun 2012)

  28 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.2.3.ebuild,
  +files/clhep-2.1.2.3-libdir.patch:
  Version bump. Switch to cmake build, added patch to respect libdir

  26 Jun 2012; Justin Lecher <jlec@gentoo.org> clhep-2.1.2.2.ebuild,
  +files/clhep-2.1.2.2-automake-1.12.patch, metadata.xml:
  Add fix for automake-1.12, #423559; move to autotools-utils

  06 Jun 2012; Benda Xu <heroxbd@gentoo.org> clhep-2.1.2.2.ebuild:
  keyword ~x86-linux and ~amd64-linux

*clhep-2.1.2.2 (02 Mar 2012)

  02 Mar 2012; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.2.2.ebuild:
  Version bump

*clhep-2.1.2.0 (29 Dec 2011)

  29 Dec 2011; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.2.0.ebuild:
  Version bump

*clhep-2.1.1.0 (06 Aug 2011)

  06 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.1.0.ebuild:
  Version bump

  28 Jun 2011; Brent Baude <ranger@gentoo.org> clhep-2.1.0.1.ebuild: