@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/clhep
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/clhep/ChangeLog,v 1.44 2012/11/30 21:59:52 bicatali Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/clhep/ChangeLog,v 1.45 2013/11/25 21:59:14 bicatali Exp $
+
+*clhep-2.1.4.1 (25 Nov 2013)
+
+  25 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org> +clhep-2.1.4.1.ebuild:
+  Version bump, thanks Oliver Freyermuth
 
 *clhep-2.1.3.1 (30 Nov 2012)
 
